--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@ body {
   margin: 0;
   height: 0;
   width: 100%;
-  height: 100%;
+  height: max-content !important;
   box-sizing: border-box;
 }
 
